second changes for images

--- a/featured.html
+++ b/featured.html
@@ -26,7 +26,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-md d-flex flex-row-reverse">
       <a href="index.html" class="navbar-brand">
-        <img src="/Images/brlogs.JPG" class="m-3 p-3 img-fluid" alt="">
+        <img src="/Images/brlogomain.JPG" class="m-3 p-3 img-fluid rounded-5" alt="breathe logo">
       </a>
       <button class="navbar-toggler bg-light border-dark" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarbreathe" aria-controls="navbarbreathe" 
