--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <title>Breathe Home</title>
 </head>
 <style>
-  
+
  body{
   background-image: linear-gradient(rgba(255, 255, 255,0.45),
   rgba(0,0,0,0.75)), url(/Images/brlogo.JPG);
@@ -26,7 +26,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-md d-flex flex-row-reverse">
       <a href="index.html" class="navbar-brand">
-        <img src="/Images/brlogs.JPG" class="img-fluid m-3 p-3" alt="">
+        <img src="/Images/brlogomain.JPG" class="m-3 p-3 img-fluid rounded-5" alt="breathe logo">
       </a>
       <button class="navbar-toggler bg-light border-dark" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarbreathe" aria-controls="navbarbreathe" 
