--- a/featured.html
+++ b/featured.html
@@ -13,7 +13,7 @@
 
   body{
   background-image: linear-gradient(rgba(255, 255, 255,0.45),
-  rgba(0,0,0,0.75)), url(/Images/breathe.jpg);
+  rgba(0,0,0,0.75)), url(/Images/breathe.jpeg);
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -26,7 +26,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-md d-flex flex-row-reverse">
       <a href="index.html" class="navbar-brand">
-        <img src="/Images/brlogomain.JPG" class="m-3 p-3 img-fluid rounded-5" alt="breathe logo">
+        <img src="/Images/brlogomain.jpeg" class="m-3 p-3 img-fluid rounded-5" alt="breathe logo">
       </a>
       <button class="navbar-toggler bg-light border-dark" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarbreathe" aria-controls="navbarbreathe" 
@@ -73,7 +73,7 @@
 <!-- RIGHT CONTENT AREA FOR THUMBNAILS  -->
     <div class="card row col-md-4 mt-3">
       <div class="card-body ">
-        <img src="Images/y3.png" class="card-img-top g-0 object-fit-contain border rounded" alt="">
+        <img src="Images/y3.jpeg" class="card-img-top g-0 object-fit-contain border rounded" alt="">
         <p class="card-text text-bg-dark p-4 fs-4">Yoga is an ancient practice that combines physical 
           postures with mindfulnesstechniques in order to bring more balance into one’s life..
         </p>
@@ -81,7 +81,7 @@
     </div>
     <div class="card row col-md-4 mt-3">
       <div class="card-body">
-        <img src="Images/y4.png" class="card-img-top g-0 object-fit-contain border rounded" alt="">
+        <img src="Images/y4.jpeg" class="card-img-top g-0 object-fit-contain border rounded" alt="">
         <p class="card-text text-bg-dark p-4 fs-4">Yoga is the ability to direct the mind exclusively 
           toward an object and sustain that direction without any distractions.
         </p>
@@ -98,12 +98,12 @@
       <p class="fs-3">You've decided to take the plunge and start your strength exercise journey. 
         It's exciting, but can be intimidating too. 
         Whether you're a beginner or advanced lifter, the key to success is consistency.</p>
-      <a href="featured.html" class="btn btn-dark">Begin your Journey</a>
+      <a href="content.html" class="btn btn-dark">Begin your Journey</a>
     </div>
 <!-- RIGHT CONTENT AREA FOR THUMBNAILS  -->
     <div class="card row col-md-4 mt-3">
       <div class="card-body">
-        <img src="Images/s3.png" class="card-img-top g-0 object-fit-contain border rounded" alt="">
+        <img src="Images/s3.jpeg" class="card-img-top g-0 object-fit-contain border rounded" alt="">
         <p class="card-text text-bg-dark p-4 fs-4">Weight lifting is an effective and efficient way for 
         individuals to build muscle mass, strength, endurance and confidence
         </p>
@@ -111,7 +111,7 @@
     </div>
     <div class="card row col-md-4 mt-3">
       <div class="card-body">
-        <img src="Images/s4.png" class="card-img-top g-0 object-fit-contain border rounded" alt="">
+        <img src="Images/s4.jpeg" class="card-img-top g-0 object-fit-contain border rounded" alt="">
         <p class="card-text text-bg-dark p-4 fs-4">Compound lifts are more challenging but less time 
           consuming than performing multiple different isolation exercises. 
         </p>
@@ -128,12 +128,12 @@
       <p class="fs-3">Aerobics can be done anytime and anywhere. From the comfort of your own home or workplace, 
         you can enjoy the benefits of aerobic exercise without ever having to leave your chair! 
       </p>
-      <a href="featured.html" class="btn btn-dark">Begin your Journey</a>
+      <a href="content.html" class="btn btn-dark">Begin your Journey</a>
     </div>
 <!-- RIGHT CONTENT AREA FOR THUMBNAILS  -->
     <div class="card row col-md-4 mt-3">
       <div class="card-body">
-        <img src="Images/a2.png" class="card-img-top g-0 object-fit-contain border rounded" alt="">
+        <img src="Images/a2.jpeg" class="card-img-top g-0 object-fit-contain border rounded" alt="">
         <p class="card-text text-bg-dark p-3 fs-4">Aerobics provide cardiovascular benefits as well 
           as improving physical stamina and flexibility.
         </p>
@@ -141,7 +141,7 @@
     </div>
     <div class="card row col-md-4 mt-3">
       <div class="card-body">
-        <img src="Images/a4.png" class="card-img-top g-0 object-fit-contain border rounded " alt="">
+        <img src="Images/a4.jpeg" class="card-img-top g-0 object-fit-contain border rounded " alt="">
         <p class="card-text text-bg-dark p-3 fs-4"> To maintain a good health or to embrace a healthy
            lifestyle, an individual needs to keep the body sparkling and strong..
         </p>
