added content page and modified root file of images

--- a/about.html
+++ b/about.html
@@ -46,7 +46,10 @@
             <a class="nav-link text-dark mx-3 fs-5" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-bg-light rounded-5" aria-current="page" href="about.html">About Us</a>
+            <a class="nav-link text-dark mx-3 fs-5"  href="content.html">Content</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-2 active text-bg-light rounded-5 fs-5 pb-3" aria-current="page" href="about.html">About Us</a>
           </li>
       </div>
     </nav>
