--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-md d-flex flex-row-reverse">
       <a href="index.html" class="navbar-brand">
-        <img src="/Images/brlogomain.JPG" class="m-3 p-3 img-fluid rounded-5" alt="breathe logo">
+        <img src="/Images/brlogomain.jpeg" class="m-3 p-3 img-fluid rounded-5" alt="breathe logo">
       </a>
       <button class="navbar-toggler bg-light border-dark" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarbreathe" aria-controls="navbarbreathe" 
@@ -48,6 +48,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link active text-bg-light fs-5 rounded-5" aria-current="page" href="gallery.html">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-dark mx-3  fs-5"  href="content.html">Content</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-dark mx-3 fs-5" href="about.html">About Us</a>
@@ -138,7 +141,7 @@
             </div>
   
           <div class="carousel-item">
-            <img src="Gallery/lift/s4.webp" class="d-block w-100" alt="...">
+            <img src="Gallery/lift/s4.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption">
               <h5>Dumbell bench press</h5>
               <p>Pump your chest in a bench!</p>
@@ -146,7 +149,7 @@
           </div>
   
           <div class="carousel-item">
-            <img src="Gallery/lift/s2.webp" class="d-block w-100" alt="...">
+            <img src="Gallery/lift/s2.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption">
               <h5>Dumbell shoulder raise</h5>
               <p>Take one step at a time</p>
@@ -201,7 +204,7 @@
           </div>
   
           <div class="carousel-item">
-            <img src="Gallery/aero/a3.webp" class="d-block w-100" alt="...">
+            <img src="Gallery/aero/a3.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption">
               <h5>Magical Exercise</h5>
               <p>Bring your own wand and move it around</p>
