--- a/content.html
+++ b/content.html
@@ -36,16 +36,19 @@
       <div class="collapse navbar-collapse" id="navbarbreathe">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link text-dark mx-3 fs-5" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="featured.html">Featured</a>
+            <a class="nav-link text-dark mx-3 fs-5 " href="featured.html">Featured</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="gallery.html">Gallery</a>
+            <a class="nav-link text-dark mx-3 fs-5" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-bg-dark" aria-current="page" href="about.html">About Us</a>
+            <a class="nav-link active text-bg-light mx-3 fs-5 rounded-5" aria-current="page" href="content.html">Content</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-dark mx-3 fs-5" href="about.html">About Us</a>
           </li>
       </div>
     </nav>
