--- a/featured.html
+++ b/featured.html
@@ -46,6 +46,9 @@
             <a class="nav-link text-dark mx-3 fs-5" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link text-dark mx-3  fs-5"  href="content.html">Content</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link text-dark mx-3 fs-5" href="about.html">About Us</a>
           </li>
       </div>
