changed about and gallery

--- a/gallery.html
+++ b/gallery.html
@@ -188,7 +188,7 @@
   
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="Gallery/aero/a1.webp" class="d-block w-100" alt="...">
+            <img src="Gallery/aero/a1.jpeg" class="d-block w-100" alt="...">
               <div class="carousel-caption">
                 <h5>Hula hoop</h5>
                 <p>Twist your body around</p>
