--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
 
   body{
   background-image: linear-gradient(rgba(255, 255, 255,0.45),
-  rgba(0,0,0,0.75)), url(/Images/content/twowork.jpeg);
+  rgba(0,0,0,0.75)), url(Images/content/twowork.jpeg);
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -30,7 +30,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-md d-flex flex-row-reverse">
       <a href="index.html" class="navbar-brand">
-        <img src="/Images/content/brlogomain.jpeg" class="m-3 p-3 img-fluid rounded-5" alt="breathe logo">
+        <img src="Images/content/brlogomain.jpeg" class="m-3 p-3 img-fluid rounded-5" alt="breathe logo">
       </a>
       <button class="navbar-toggler bg-light border-dark" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarbreathe" aria-controls="navbarbreathe" 
