--- a/content.html
+++ b/content.html
@@ -13,7 +13,7 @@
 
  body{
   background-image: linear-gradient(rgba(255, 255, 255,0.45),
-  rgba(0,0,0,0.75)), url(Images/contents.jpeg);
+  rgba(0,0,0,0.75)), url(Gallery/yoga/contents.jpeg);
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
