--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-md d-flex flex-row-reverse">
       <a href="index.html" class="navbar-brand">
-        <img src="Images/content/brlogomain.jpeg" class="m-3 p-3 img-fluid rounded-5" alt="breathe logo">
+        <img src="Gallery/yoga/brlogomain.jpeg" class="m-3 p-3 img-fluid rounded-5" alt="breathe logo">
       </a>
       <button class="navbar-toggler bg-light border-dark" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarbreathe" aria-controls="navbarbreathe" 
@@ -110,15 +110,15 @@
         <div class="carousel-inner">
 
           <div class="carousel-item active" data-bs-interval="5000">
-            <img src="Images/content/y1.jpeg" class="d-block w-100" alt="yoga">
+            <img src="Images/y1.jpeg" class="d-block w-100" alt="yoga">
           </div>
 
           <div class="carousel-item" data-bs-interval="5000">
-            <img src="Images/content/s1.jpeg" class="d-block w-100" alt="lifting">
+            <img src="Images/s1.jpeg" class="d-block w-100" alt="lifting">
           </div>
 
           <div class="carousel-item" data-bs-interval="5000">
-            <img src="Images/content/a1.jpeg" class="d-block w-100" alt="workout">
+            <img src="Images/a1.jpeg" class="d-block w-100" alt="workout">
           </div>
         </div>
 
