major changes added content and id's from gall to content

--- a/content.html
+++ b/content.html
@@ -20,6 +20,11 @@
   width: 100%;
   height: 100%;
 }
+
+.row h2, h3, h4{
+  text-shadow: 0px 0px 12px #fff;
+}
+
 </style>
 <body>
   <div class="container">
@@ -53,10 +58,185 @@
       </div>
     </nav>
   </div>
+<!-- Top slider for content images -->
 
-  <div>
-    <H2>Content page</H2>
+<div id="karosel5" class="carousel slide m-3" data-bs-ride="carousel">
+
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="3000">
+      <img src="Gallery/yoga/yy1.jpeg" class="d-block object-fit-cover w-100" alt="...">
+    </div>
+    <div class="carousel-item" data-bs-interval="3000">
+      <img src="Gallery/yoga/yy2.jpeg" class="d-block object-fit-cover w-100" alt="...">
+    </div>
+    <div class="carousel-item" data-bs-interval="3000">
+      <img src="Gallery/yoga/yy3.jpeg" class="d-block object-fit-cover w-100" alt="...">
+    </div>
+    <div class="carousel-item" data-bs-interval="3000">
+      <img src="Gallery/yoga/yy4.jpeg" class="d-block object-fit-cover w-100" alt="...">
+    </div>
+    <div class="carousel-item" data-bs-interval="3000">
+      <img src="Gallery/yoga/yy5.jpeg" class="d-block object-fit-cover w-100" alt="...">
+    </div>
+    <div class="carousel-item" data-bs-interval="3000">
+      <img src="Gallery/yoga/yy6.jpeg" class="d-block object-fit-cover w-100" alt="...">
+    </div>
+    <div class="carousel-item" data-bs-interval="3000">
+      <img src="Gallery/yoga/yy8.jpeg" class="d-block object-fit-cover w-100" alt="...">
+    </div>
+    <div class="carousel-item" data-bs-interval="3000">
+      <img src="Gallery/yoga/yy9.jpeg" class="d-block object-fit-cover w-100" alt="...">
+    </div>
   </div>
+
+  <button class="carousel-control-prev" type="button" data-bs-target="#karosel5" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#karosel5" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+
+<div class="row mt-3 text-white bg-dark text-center">
+  <h2>Beginner Yoga</h2>
+<h3>7 Basic Yoga Positions for Beginners</h3>
+</div>
+
+<div class="row mt-3 text-white bg-dark px-4 border border-light">
+  <div class="col-md-7 text-center">
+      <h4 class="pt-2" id="mountain">1. Mountain Pose (Tadasana)</h4>
+      <img src="Images/motheryoga.JPG"  class="object-fit-contain w-100 p-2" alt="">
+  </div>
+  <div class="col-md-5 pt-3">
+    <p>Also known as <i>"The mother of yoga poses"</i> it looks easy. This two-footed stance is the 
+      foundation for many other positions that require awareness and balance. It is through this pose
+      that one finds the proper alignment and shape for additional movements
+    </p>
+
+    <p><b>How to Do It:</b> with feet together and arms at your side. Ground your feet, making sure to 
+      press all four corners down into the ground. Next, straighten your legs, then tuck your tailbone 
+      in as you engage your thigh muscles.<br><br> As you inhale, elongate through your torso and extend your 
+      arms up, then out. Exhale and release your shoulder blades away from your head, toward the back 
+      of your waist as you release arms back to your sides.</p>
+  </div>
+</div>
+
+<div class="row my-3 text-white bg-dark px-4 border border-light">
+  <div class="col-md-7 text-center">
+      <h4 class="pt-2">2. Child’s Pose (Balasana)</h4>
+      <img src="Images/balasana.JPG"  class="object-fit-contain w-100 p-2" alt="">
+  </div>
+  <div class="col-md-5 pt-3">
+    <p>Consider this exercise your reset moment. Simple in design, this easy pose relaxes your nervous 
+      system and is a great place to take a breather during class if you need one. Got knee problems? 
+      Make sure to lower into this position with extra care.
+    </p>
+
+    <p><b>How to Do It:</b> Start in a kneeling position with toes tucked under. Lower your butt towards your 
+      feet as you stretch your upper body forward and down with arms extended. Your stomach should be 
+      comfortably resting on thighs, with your forehead touching the mat.
+    </p>
+  </div>
+</div>
+
+<div class="row my-3 text-white bg-dark px-4 border border-light">
+  <div class="col-md-7 text-center">
+      <h4 class="pt-2">3. Cat/Cow Pose (Marjaryasana to Bitilasana)</h4>
+      <img src="Images/cow.JPG"  class="object-fit-contain w-100 p-2" alt="">
+  </div>
+  <div class="col-md-5 pt-3">
+    <p>Cat/cow is a great way to warm up your back, explains Ingber, and get your body ready for downward-facing
+       dog. It also helps address mobility (hello, desk jobs) and work your core without the extra stress on your
+        wrists and shoulders that you might feel in a down dog move.
+    </p>
+
+    <p>How to Do It: Begin with hands and knees on the floor, spine neutral and abs engaged. Take a big inhale, 
+      then, as you exhale, round your spine up towards the ceiling and tuck your chin towards your chest, releasing 
+      your neck. On the next inhale, arch your back and relax your abs. Lift your head and tailbone upwards, being 
+      careful not to place any pressure on your neck by moving too quickly or deeply.
+    </p>
+  </div>
+</div>
+
+<div class="row my-3 text-white bg-dark px-4 border border-light">
+  <div class="col-md-7 text-center">
+      <h4 class="pt-2">4. Corpse Pose (Shavasana)</h4>
+      <img src="Images/corpse.JPG"  class="object-fit-contain w-100 p-2" alt="">
+  </div>
+  <div class="col-md-5 pt-3">
+    <p>Lying around may seem pointless, but this is one of the most meditative moments in any yoga practice. 
+      Corpse pose calms the mind, relieves stress and induces a relaxed state. (Why do you think yogis are so chill?)
+    </p>
+
+    <p><b>How to Do It:</b> Lie down on your back and let your feet fall to their sides. Bring your arms alongside your torso, 
+      but slightly separated with palms facing the sky. Relax the entire body — your face included. Usually the final 
+      pose in a class, you’ll stay in this pose anywhere from 30 seconds to five or 10 minutes. 
+    </p>
+  </div>
+</div>
+
+<div class="row my-3 text-white bg-dark px-4 border border-light">
+  <div class="col-md-7 text-center">
+      <h4 class="pt-2" id="war1">5. Warrior I (Virabhadrasana I)</h4>
+      <img src="Images/warrior1.JPG"  class="object-fit-contain w-100 p-2" alt="">
+  </div>
+  <div class="col-md-5 pt-3">
+    <p>The first in the Warrior series, this pose strengthens your legs and opens your hips and chest, while also stretching 
+    your arms and legs. While holding this exercise, you’ll see an increase in your concentration and balance — both essential 
+    qualities to carry through a yoga practice.
+    </p>
+
+    <p><b>How to Do It:</b> Start in mountain pose. As you exhale, step your left foot back about four feet, so you’re in a lunge
+      position with the right ankle over the right knee. Raise your arms straight overhead, biceps by ears, and turn your
+      left foot about 90 degrees to face the left wall. Align your left heel perpendicular with your right heel. Expand 
+      your chest and pull your shoulders back, then lower down toward the floor as you lift your arms up. Make sure your
+      hips stay square to the front, as you continue to breathe.
+    </p>
+  </div>
+</div>
+
+<div class="row my-3 text-white bg-dark px-4 border border-light">
+  <div class="col-md-7 text-center">
+      <h4 class="pt-2" id="war2">6. Warrior II (Virabhadrasana II)</h4>
+      <img src="Images/warrior2.JPG"  class="object-fit-contain w-100 p-2" alt="">
+  </div>
+  <div class="col-md-5 pt-3">
+    <p>Similar to Warrior I, Warrior II offers just a slight variation, with your upper body rotated to the side instead
+       of facing forward. You’ll still reap the same quad-strengthening benefits of Warrior I, but you’ll also open up 
+       your hip flexor muscles for greater flexibility.
+    </p>
+
+    <p><b>How to Do It:</b>Begin in mountain pose. Exhale and step your left foot back about four feet, making sure the 
+      heels are in line. Turn your back foot 90 degrees so that it’s now perpendicular with the front one. Raise your 
+      arms to shoulder height, parallel to floor, with your right arm in front of you, and left arm behind. Bend your 
+      front knee so it’s directly over ankle and sink hips low until the front thigh is parallel to floor. Look straight 
+      ahead, eyes in line with your front-facing arm.
+    </p>
+  </div>
+</div>
+
+<div class="row my-3 text-white bg-dark px-4 border border-light">
+  <div class="col-md-7 text-center">
+      <h4 class="pt-2" id="dog">7. Downward-Facing Dog (Adho Mukha Svanansana)</h4>
+      <img src="Images/doggy.JPG"  class="object-fit-contain w-100 p-2" alt="">
+  </div>
+  <div class="col-md-5 pt-3">
+    <p>
+      One of the most recognizable poses of the bunch, down dog is a great way to stretch your back, shoulders, arms,
+      hamstrings and well, just about everything. And it gets you calm and centered, too.
+    </p>
+
+    <p><b>How to Do It:</b>Come onto hands and knees with palms just past your shoulder, fingers pointing forwards. 
+      Knees should be under your hips and toes tucked. Lift your hips and press back into a V-shape position with your
+      body. Feet should be hip-width apart. Keep in mind, it’s OK if you can’t get your feet to the floor (your hamstrings
+      might be too tight). Spread through all 10 fingers and toes and move your chest towards your legs.
+    </p>
+  </div>
+</div>
+
 <!-- FOOTER DETAILS FOR IMPROVEMENT -->
 <div class="card text-center bg-dark bg-gradient text-white">
   <div class="card-header h1">
