--- a/gallery.html
+++ b/gallery.html
@@ -76,7 +76,7 @@
    
          <div class="carousel-inner">
            <div class="carousel-item active">
-             <img src="Gallery/yoga/y1b.jpeg" class="d-block w-100" alt="...">
+             <a href="content.html#mountain" style="text-decoration: none; color: white;"><img src="Gallery/yoga/y1b.jpeg" class="d-block w-100" alt="..."></a>
                <div class="carousel-caption">
                  <h5>Mountain Pose/Tadasana</h5>
                  <p>The mother of all yoga poses</p>
@@ -84,7 +84,7 @@
              </div>
    
            <div class="carousel-item">
-             <img src="Gallery/yoga/y2b.jpeg" class="d-block w-100" alt="...">
+            <a href="content.html#dog" style="text-decoration: none; color: white;"><img src="Gallery/yoga/y2b.jpeg" class="d-block w-100" alt="..."></a>
              <div class="carousel-caption">
                <h5>Downward-Facing Dog</h5>
                <p>(Adho Mukha Svanansana)</p>
@@ -92,7 +92,7 @@
            </div>
    
            <div class="carousel-item">
-             <img src="Gallery/yoga/y3b.jpeg" class="d-block w-100" alt="...">
+            <a href="content.html#war1" style="text-decoration: none; color: white;"><img src="Gallery/yoga/y3b.jpeg" class="d-block w-100" alt="..."></a>
              <div class="carousel-caption">
                <h5>Warrior I</h5>
                <p>The first in the Warrior series</p>
@@ -100,7 +100,7 @@
            </div>
    
            <div class="carousel-item">
-             <img src="Gallery/yoga/y4b.jpeg" class="d-block w-100" alt="...">
+             <a href="content.html#war2" style="text-decoration: none; color: white;"> <img src="Gallery/yoga/y4b.jpeg" class="d-block w-100" alt="..."></a>
              <div class="carousel-caption">
                <h5>Warrior II</h5>
                <p>Similar to Warrior I, Warrior II offers just a slight variation.</p>
