--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       </div>
 
       <!-- RIGHT CONTENT AREA FOR THUMBNAILS  -->
-      <div id="karosel" class="carousel slide row col-lg-6 mt-3 object-fit-contain" data-bs-ride="carousel">
+      <div id="karosel" class="carousel slide row col-lg-6 mt-3 object-fit-contain carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
 
           <div class="carousel-item active" data-bs-interval="5000">
