added drop down option for content level

--- a/content.html
+++ b/content.html
@@ -50,7 +50,16 @@
             <a class="nav-link text-dark mx-3 fs-5" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-bg-light mx-3 fs-5 rounded-5" aria-current="page" href="content.html">Content</a>
+            <div class="dropdown">
+              <button class="btn bg-light dropdown-toggle text-dark mx-3 fs-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Contents
+              </button>
+              <ul class="dropdown-menu bg-dark">
+                <li><a class="dropdown-item active bg-dark" href="beginner.html">Beginner</a></li>
+                <li><a class="dropdown-item text-white" href="intermediate.html">Intermediate</a></li>
+                <li><a class="dropdown-item text-white" href="advanced.html">Advance</a></li>
+              </ul>
+            </di>
           </li>
           <li class="nav-item">
             <a class="nav-link text-dark mx-3 fs-5" href="about.html">About Us</a>
@@ -101,7 +110,7 @@
 
 
 <div class="row mt-3 text-white bg-dark text-center">
-  <h2>Beginner Yoga</h2>
+  <h2 id="yogastart">Beginner Yoga</h2>
 <h3>7 Basic Yoga Positions for Beginners</h3>
 </div>
 
