--- a/featured.html
+++ b/featured.html
@@ -71,7 +71,7 @@
         it can be easy to forget to prioritize your physical 
         and mental wellbeing.
       </p>
-      <a href="content.html" class="btn btn-dark">Begin your Journey</a>
+      <a href="content.html#yogastart" class="btn btn-dark">Begin your Journey</a>
     </div>
 <!-- RIGHT CONTENT AREA FOR THUMBNAILS  -->
     <div class="card row col-md-4 mt-3">
