--- a/index.html
+++ b/index.html
@@ -72,8 +72,19 @@
             <a class="nav-link text-dark mx-3 fs-5" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark mx-3 fs-5"  href="content.html">Content</a>
+            <div class="dropdown">
+              <button class="btn bg-secondary dropdown-toggle text-dark mx-3 fs-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Contents
+              </button>
+
+              <ul class="dropdown-menu bg-dark">
+                <li><a class="dropdown-item text-white" href="beginner.html">Beginner</a></li>
+                <li><a class="dropdown-item text-white" href="intermediate.html">Intermediate</a></li>
+                <li><a class="dropdown-item text-white" href="advanced.html">Advance</a></li>
+              </ul>
+            </di>
           </li>
+
           <li class="nav-item">
             <a class="nav-link text-dark mx-3 fs-5" href="about.html">About Us</a>
           </li>
