modified content html to beginner html added dropdown backgrounds and link

--- a/about.html
+++ b/about.html
@@ -46,7 +46,17 @@
             <a class="nav-link text-dark mx-3 fs-5" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark mx-3 fs-5"  href="content.html">Content</a>
+            <div class="dropdown">
+              <button class="btn bg-transparent dropdown-toggle text-dark mx-3 fs-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Contents
+              </button>
+
+              <ul class="dropdown-menu bg-dark">
+                <li><a class="dropdown-item text-white" href="beginner.html">Beginner</a></li>
+                <li><a class="dropdown-item text-white" href="intermediate.html">Intermediate</a></li>
+                <li><a class="dropdown-item text-white" href="advanced.html">Advance</a></li>
+              </ul>
+            </di>
           </li>
           <li class="nav-item">
             <a class="nav-link mx-2 active text-bg-light rounded-5 fs-5 pb-3" aria-current="page" href="about.html">About Us</a>
@@ -84,7 +94,7 @@
       <div class="card-header h1">
         Breathe
       </div>
-      <div class="card-body bg-">
+      <div class="card-body">
         <h5 class="card-title">It never ends here</h5>
         <p class="card-text">Our magazine is available online, so you can stay up-to-date on the latest health and fitness news anytime, anywhere.</p>
         <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook fs-1 p-2 text-white"></i></a>
