--- a/beginner.html
+++ b/beginner.html
@@ -56,8 +56,8 @@
               </button>
               <ul class="dropdown-menu bg-dark">
                 <li><a class="dropdown-item active bg-dark" href="beginner.html">Beginner</a></li>
-                <li><a class="dropdown-item text-white" href="intermediate.html">Intermediate</a></li>
-                <li><a class="dropdown-item text-white" href="advanced.html">Advance</a></li>
+                <li><a class="dropdown-item text-dark" href="intermediate.html">Intermediate</a></li>
+                <li><a class="dropdown-item text-dark" href="advanced.html">Advance</a></li>
               </ul>
             </di>
           </li>
@@ -251,7 +251,7 @@
   <div class="card-header h1">
     Breathe
   </div>
-  <div class="card-body bg-">
+  <div class="card-body">
     <h5 class="card-title">It never ends here</h5>
     <p class="card-text">Our magazine is available online, so you can stay up-to-date on the latest health and fitness news anytime, anywhere.</p>
     <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook fs-1 p-2 text-white"></i></a>
