--- a/gallery.html
+++ b/gallery.html
@@ -49,9 +49,21 @@
           <li class="nav-item">
             <a class="nav-link active text-bg-light fs-5 rounded-5" aria-current="page" href="gallery.html">Gallery</a>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link text-dark mx-3  fs-5"  href="content.html">Content</a>
+            <div class="dropdown">
+              <button class="btn bg-transparent dropdown-toggle text-dark mx-3 fs-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Contents
+              </button>
+
+              <ul class="dropdown-menu bg-dark">
+                <li><a class="dropdown-item text-white" href="beginner.html">Beginner</a></li>
+                <li><a class="dropdown-item text-white" href="intermediate.html">Intermediate</a></li>
+                <li><a class="dropdown-item text-white" href="advanced.html">Advance</a></li>
+              </ul>
+            </di>
           </li>
+
           <li class="nav-item">
             <a class="nav-link text-dark mx-3 fs-5" href="about.html">About Us</a>
           </li>
@@ -237,7 +249,7 @@
   <div class="card-header h1">
     Breathe
   </div>
-  <div class="card-body bg-">
+  <div class="card-body">
     <h5 class="card-title">It never ends here</h5>
     <p class="card-text">Our magazine is available online, so you can stay up-to-date on the latest health and fitness news anytime, anywhere.</p>
     <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook fs-1 p-2 text-white"></i></a>
