--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </li>
           <li class="nav-item">
             <div class="dropdown">
-              <button class="btn bg-secondary dropdown-toggle text-dark mx-3 fs-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <button class="btn bg-transparent dropdown-toggle text-dark mx-3 fs-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Contents
               </button>
 
@@ -141,6 +141,7 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
+
       </div>
     </div>
   </div>
