added new carousel content for beginner page for lifters

--- a/beginner.html
+++ b/beginner.html
@@ -25,6 +25,11 @@
   text-shadow: 0px 0px 12px #fff;
 }
 
+.carousel-item{
+  border-style: ridge;
+  border-color: white;
+  border-radius: 5px;
+}
 </style>
 <body>
   <div class="container">
@@ -69,7 +74,7 @@
   </div>
 <!-- Top slider for content images -->
 
-<div id="karosel5" class="carousel slide m-3" data-bs-ride="carousel">
+<div id="karosel5" class="carousel slide mx-5 my-3 p-5" data-bs-ride="carousel">
 
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="3000">
@@ -162,7 +167,7 @@
         wrists and shoulders that you might feel in a down dog move.
     </p>
 
-    <p>How to Do It: Begin with hands and knees on the floor, spine neutral and abs engaged. Take a big inhale, 
+    <p><b>How to Do It:</b> Begin with hands and knees on the floor, spine neutral and abs engaged. Take a big inhale, 
       then, as you exhale, round your spine up towards the ceiling and tuck your chin towards your chest, releasing 
       your neck. On the next inhale, arch your back and relax your abs. Lift your head and tailbone upwards, being 
       careful not to place any pressure on your neck by moving too quickly or deeply.
@@ -218,7 +223,7 @@
        your hip flexor muscles for greater flexibility.
     </p>
 
-    <p><b>How to Do It:</b>Begin in mountain pose. Exhale and step your left foot back about four feet, making sure the 
+    <p><b>How to Do It:</b> Begin in mountain pose. Exhale and step your left foot back about four feet, making sure the 
       heels are in line. Turn your back foot 90 degrees so that it’s now perpendicular with the front one. Raise your 
       arms to shoulder height, parallel to floor, with your right arm in front of you, and left arm behind. Bend your 
       front knee so it’s directly over ankle and sink hips low until the front thigh is parallel to floor. Look straight 
@@ -238,13 +243,54 @@
       hamstrings and well, just about everything. And it gets you calm and centered, too.
     </p>
 
-    <p><b>How to Do It:</b>Come onto hands and knees with palms just past your shoulder, fingers pointing forwards. 
+    <p><b>How to Do It:</b> Come onto hands and knees with palms just past your shoulder, fingers pointing forwards. 
       Knees should be under your hips and toes tucked. Lift your hips and press back into a V-shape position with your
       body. Feet should be hip-width apart. Keep in mind, it’s OK if you can’t get your feet to the floor (your hamstrings
       might be too tight). Spread through all 10 fingers and toes and move your chest towards your legs.
     </p>
   </div>
 </div>
+
+<div id="karosel6" class="carousel slide mx-5 my-3 p-5" data-bs-ride="carousel">
+
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="3000">
+      <img src="Gallery/lift/s4.webp" class="d-block object-fit-contain w-100" alt="...">
+    </div>
+    <div class="carousel-item" data-bs-interval="3000">
+      <img src="Gallery/lift/s6.jpeg" class="d-block object-fit-cover w-100" alt="...">
+    </div>
+    <div class="carousel-item" data-bs-interval="3000">
+      <img src="Gallery/lift/s7.jpeg" class="d-block object-fit-cover w-100" alt="...">
+    </div>
+    <div class="carousel-item" data-bs-interval="3000">
+      <img src="Gallery/lift/s8.jpeg" class="d-block object-fit-cover w-100" alt="...">
+    </div>
+    <div class="carousel-item" data-bs-interval="3000">
+      <img src="Gallery/lift/s9.webp" class="d-block object-fit-cover w-100" alt="...">
+    </div>
+    <div class="carousel-item" data-bs-interval="3000">
+      <img src="Gallery/lift/s10.webp" class="d-block object-fit-cover w-100" alt="...">
+    </div>
+    <div class="carousel-item" data-bs-interval="3000">
+      <img src="Gallery/lift/s11.jpeg" class="d-block object-fit-cover w-100" alt="...">
+    </div>
+    <div class="carousel-item" data-bs-interval="3000">
+      <img src="Gallery/lift/s12.jpeg" class="d-block object-fit-cover w-100" alt="...">
+    </div>
+  </div>
+
+  <button class="carousel-control-prev" type="button" data-bs-target="#karosel6" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#karosel6" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+ 
 
 <!-- FOOTER DETAILS FOR IMPROVEMENT -->
 <div class="card text-center bg-dark bg-gradient text-white">
